Fix light theme text color for better readability

--- a/styles/main.css
+++ b/styles/main.css
@@ -21,7 +21,7 @@
 :root {
     /* light theme colours */
     --color-light-page-background: lightgoldenrodyellow;
-    --color-light-page-text: white;
+    --color-light-page-text: darkgreen;
     --color-light-headings-background: lightblue;
     --color-light-headings-text: darkblue;
     --color-light-link-text: darkgreen;
